# lpx-toolkit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  inspector-mockup.html  lpx_inspect.py  pm-feedback.md  pyproject.toml  tasks.md
.github/workflows/: test.yml
lpx_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_au_bundles.py  test_au_presets.py  test_auval_cache.py  test_auval_inventory.py  test_auval_parser.py  test_cli.py  test_diagnostics.py  test_extended_metadata.py  test_html_output.py  test_index_cache.py  test_json_output.py  test_metronome_filter.py  test_phantom_plugins.py  test_project_metadata.py  test_readonly_invariant.py  test_region_extraction.py  test_relative_time.py  test_rollup.py  test_serve.py
tests/fixtures/: auval_sample.txt
